@@ -174,16 +174,6 @@
         9lRSiaTSlLjnLOu1Hyp6lPcftiDAj9m4maMAAAAASUVORK5CYII=
 </value>
   </data>
-  <data name="GitBash.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAgY0hSTQAAeiYAAICEAAD6AAAAgOgAAHUwAADqYAAAOpgAABdwnLpRPAAAAKtJREFUOE9jNJt3
-        bRojA2MmA4ngP8P/6aeStLIYzOdd/3/h////234Sj0HqQfrAdoIYi1/8/195jXgMUo9iwJon//+3XyQe
-        g9TDDYibsxfMIRWD9IG9sHr16v9fvnz5/+zZM6IxSD1IH9iALVu2AIOEdADSh2JA45GX/2GYGOMIGgBS
-        gAuDLCBoACFXEDSA/i4g5GR0eRQv4HMuPjlwNG7atMmXXExiBsauHAABpMzHE8j8oAAAAABJRU5ErkJg
-        gg==
-</value>
-  </data>
   <data name="EditSettings.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
