@@ -328,4 +328,7 @@
   <data name="_24" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Icons\24.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="bash" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\bash.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
